--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "8.56.0",
+		"@types/highlightjs": "^9.12.6",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"autoprefixer": "^10.4.16",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
+		"mdsvex": "^0.11.0",
 		"postcss": "^8.4.33",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
@@ -40,6 +42,12 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"firebase": "^10.7.1"
+		"@types/dompurify": "^3.0.5",
+		"dompurify": "^3.0.8",
+		"firebase": "^10.7.1",
+		"highlightjs": "^9.16.2",
+		"marked": "^11.1.1",
+		"marked-highlight": "^2.1.0",
+		"pygmentize-bundled": "^2.3.0"
 	}
 }
