--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@bytemd/plugin-gfm": "^1.21.0",
+		"@toast-ui/editor": "^3.2.2",
 		"@types/dompurify": "^3.0.5",
+		"bytemd": "^1.21.0",
 		"dompurify": "^3.0.8",
 		"firebase": "^10.7.1",
 		"highlightjs": "^9.16.2",
