--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"highlightjs": "^9.16.2",
 		"marked": "^11.1.1",
 		"marked-highlight": "^2.1.0",
-		"pygmentize-bundled": "^2.3.0"
+		"pygmentize-bundled": "^2.3.0",
+		"yup": "^1.3.3"
 	}
 }
